--- a/index.html
+++ b/index.html
@@ -104,9 +104,7 @@
   
   <footer class="footer">
     <div class="wrapper">
-      <div class="logo">
-        <img src="/images/logo.svg" alt="Shortly">
-      </div>
+      <div class="logo"></div>
       <div class="nav">
         <div class="nav_links"> 
           <div class="nav_title">Features</div> 
@@ -135,11 +133,11 @@
         </div>
       </div>
       <div class="socials">
-        <a class="social-icon" href="#" style="background-image: url('/images/icon-facebook.svg');"></a>
-        <a class="social-icon" href="#" style="background-image: url('/images/icon-twitter.svg')"></a>
+        <a class="social-icon" href="#" style="background-image: url('images/icon-facebook.svg');"></a>
+        <a class="social-icon" href="#" style="background-image: url('images/icon-twitter.svg')"></a>
         
-        <a class="social-icon" href="#" style="background-image: url('/images/icon-pinterest.svg')"></a>
-        <a class="social-icon" href="#" style="background-image: url('/images/icon-instagram.svg');"></a>
+        <a class="social-icon" href="#" style="background-image: url('images/icon-pinterest.svg')"></a>
+        <a class="social-icon" href="#" style="background-image: url('images/icon-instagram.svg');"></a>
       </div>
     </div>
     
