--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
               <li><a href="#">Features</a></li>
               <li><a href="#">Pricing</a></li>
               <li><a href="#">Resources</a></li>
-              <hr>
               <li><a href="#">Login</a></li>
-              <div class="signup"><button class="btn">Sign Up</button></div>
+              <li class="signup"><button class="btn">Sign Up</button></li>
             </ul>
           </div>
           <h1 class="title">More than just shorter links</h1>
