--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
           <input type="submit" class="btn btn-lg btn--shorten" value="Shorten It!">
           <div class="empty"></div>
         </div>
-        <div class="shortenResults">
-        </div>
+        <div class="shortenResults"></div>
       </div>
       <div class="features">
         <h1 class="title">Advanced Statistics</h1>
